--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -51,6 +51,7 @@
             const refreshToken = data.data.refresh_token;
             localStorage.setItem("accessToken", accessToken);
             localStorage.setItem("refreshToken", refreshToken);
+            window.location.href = "/";
           });
       });
     </script>
