--- a/public/training/index.html
+++ b/public/training/index.html
@@ -14,6 +14,13 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./build/bundle.js"></script>
+    <script src="/build/bundle.js"></script>
+    <script>
+      setTimeout(() => {
+        if (document.getElementById("root").innerHTML === "") {
+          window.location.href = "/";
+        }
+      }, 500);
+    </script>
   </body>
 </html>
