feat: switched to esbuild

--- a/public/training/index.html
+++ b/public/training/index.html
@@ -10,17 +10,18 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/build/bundle.css" />
     <title>Onyx Chat Training</title>
   </head>
   <body>
     <div id="root"></div>
     <script src="/build/bundle.js"></script>
     <script>
-      setTimeout(() => {
-        if (document.getElementById("root").innerHTML === "") {
-          window.location.href = "/";
-        }
-      }, 500);
+      // setTimeout(() => {
+      //   if (document.getElementById("root").innerHTML === "") {
+      //     window.location.href = "/";
+      //   }
+      // }, 500);
     </script>
   </body>
 </html>
