feat: prettier login screen

--- a/public/training/index.html
+++ b/public/training/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/build/bundle.css" />
-    <title>Onyx Chat Training</title>
+    <title>Onyx Chat</title>
   </head>
   <body>
     <div id="root"></div>
