--- a/public/auth/signup.html
+++ b/public/auth/signup.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Quicksand:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Sign in to Onyx.</title>
+    <title>Sign up for Onyx</title>
     <link rel="icon" href="/favicon" />
     <style>
       body {
@@ -110,6 +110,12 @@
         margin: 0;
         margin-top: 24px;
       }
+
+      .validation {
+        display: inline-block;
+        font-size: 12px;
+        margin-top: 8px;
+      }
     </style>
   </head>
   <body>
@@ -133,7 +139,7 @@
             <path d="M192.349 256H318.846L192.349 115V256Z" fill="#120FA8" />
           </svg>
         </div>
-        <h2>Sign in.</h2>
+        <h2>Sign up.</h2>
       </div>
       <div id="form" class="form">
         <div class="formGroup">
@@ -141,7 +147,7 @@
           <input
             type="text"
             name="username"
-            placeholder="Type your username..."
+            placeholder="Type your new username..."
             id="username"
           />
         </div>
@@ -150,28 +156,73 @@
           <input
             type="password"
             name="password"
-            placeholder="Type your password..."
+            placeholder="Type your new password..."
             id="password"
           />
         </div>
+        <div class="formGroup">
+          <label for="confirm_password">Confirm Password</label>
+          <input
+            type="password"
+            name="confirm_password"
+            placeholder="Type your new password again..."
+            id="confirm_password"
+          />
+          <span class="validation" id="confirm_password_text"></span>
+        </div>
         <div class="formGroup submit">
-          <button id="loginbutton" type="button">Sign in.</button>
+          <button id="signupButton" type="button">Sign up.</button>
         </div>
       </div>
       <div class="otherOptions">
-        <p>Don't have an account? <a href="/signup">Sign up</a> instead.</p>
+        <p>Already have an account? <a href="/login">Sign in</a> instead.</p>
       </div>
     </div>
     <script>
-      const loginButton = document.getElementById("loginbutton");
-      loginButton.addEventListener("click", async () => {
+      let passwordConfirmed = false;
+      const confirm_password = document.getElementById("confirm_password");
+      const confirm_password_text = document.getElementById(
+        "confirm_password_text"
+      );
+      const password = document.getElementById("password");
+
+      confirm_password.addEventListener("input", () => {
+        if (confirm_password.value === password.value) {
+          confirm_password_text.innerText = "Passwords match!";
+          confirm_password_text.style.color = "green";
+          passwordConfirmed = true;
+        } else {
+          confirm_password_text.innerText = "Passwords do not match!";
+          confirm_password_text.style.color = "red";
+          passwordConfirmed = false;
+        }
+      });
+
+      password.addEventListener("input", () => {
+        if (confirm_password.value === password.value) {
+          confirm_password_text.innerText = "Passwords match!";
+          confirm_password_text.style.color = "green";
+          passwordConfirmed = true;
+        } else {
+          confirm_password_text.innerText = "Passwords do not match!";
+          confirm_password_text.style.color = "red";
+          passwordConfirmed = false;
+        }
+      });
+
+      const signupButton = document.getElementById("signupButton");
+      signupButton.addEventListener("click", async () => {
+        if (!passwordConfirmed) {
+          alert("Please confirm your password");
+          return;
+        }
         const username = document.getElementById("username").value;
         const password = document.getElementById("password").value;
         if (!username || !password) {
           alert("Please fill in all fields");
           return;
         }
-        fetch("/api/auth/admin/signin", {
+        fetch("/api/auth/admin/signup", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
@@ -181,7 +232,16 @@
             password,
           }),
         })
-          .then((res) => res.json())
+          .then((res) => {
+            console.log("Response", res);
+            if (res.status !== 200) {
+              return res.json().then((data) => {
+                alert(data.message);
+                throw new Error(data.message);
+              });
+            }
+            return res.json();
+          })
           .then((data) => {
             const accessToken = data.data.access_token;
             const refreshToken = data.data.refresh_token;
@@ -194,17 +254,13 @@
               ? decodeURIComponent(redirectUrlSearchParam)
               : "/";
             window.location.href = redirectUrl;
-          })
-          .catch((err) => {
-            console.log(err);
-            alert("Invalid username or password");
           });
       });
 
       window.addEventListener("keydown", (e) => {
         // if the key is enter, submit the form
         if (e.key === "Enter") {
-          loginButton.click();
+          signupButton.click();
         }
       });
 
