--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Quicksand:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Sign in to Onyx.</title>
+    <title>Log in to Onyx.</title>
     <link rel="icon" href="/favicon" />
     <style>
       body {
@@ -133,7 +133,7 @@
             <path d="M192.349 256H318.846L192.349 115V256Z" fill="#120FA8" />
           </svg>
         </div>
-        <h2>Sign in.</h2>
+        <h2>Log in.</h2>
       </div>
       <div id="form" class="form">
         <div class="formGroup">
@@ -155,7 +155,7 @@
           />
         </div>
         <div class="formGroup submit">
-          <button id="loginbutton" type="button">Sign in.</button>
+          <button id="loginbutton" type="button">Log in.</button>
         </div>
       </div>
       <div class="otherOptions">
