--- a/public/training/index.html
+++ b/public/training/index.html
@@ -20,6 +20,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
       var socket = io();
+      window.socket = socket;
       socket.on("connect", function () {
         console.info("connected");
       });
