--- a/public/auth/signup.html
+++ b/public/auth/signup.html
@@ -17,6 +17,8 @@
         font-family: "Quicksand", sans-serif;
         margin: 0;
         padding: 0;
+        background-color: #1e1e1e;
+        color: #fff;
       }
 
       .formContainer {
@@ -45,7 +47,7 @@
         display: flex;
         flex-direction: column;
         width: 300px;
-        border: 1px solid #eaeaea;
+        border: 1px solid #3e3e3e;
         padding: 36px 24px;
         border-radius: 5px;
         margin-bottom: 36px;
@@ -66,9 +68,11 @@
 
       .formGroup input {
         padding: 14px 18px;
-        border: 1px solid #eaeaea;
+        border: 1px solid #3e3e3e;
         transition: all 0.2s ease-in-out;
         font-family: "Quicksand", sans-serif;
+        background-color: #2e2e2e;
+        color: #fff;
       }
 
       .formGroup input:focus {
@@ -109,6 +113,10 @@
         width: 100%;
         margin: 0;
         margin-top: 24px;
+      }
+
+      a {
+        color: #2256f2;
       }
 
       .validation {
