feat: a bit of cleanup and name change

--- a/public/training/index.html
+++ b/public/training/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/build/bundle.css" />
-    <title>Onyx Chat</title>
+    <title>AIrtisan</title>
     <link rel="icon" href="/favicon" />
   </head>
   <body>
