--- a/public/help/support.html
+++ b/public/help/support.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Support | Onyx Chat</title>
+    <title>Support | AIrtisan</title>
   </head>
   <body>
     <h1>Support</h1>
