fix: name on login and signup pages

--- a/public/auth/signup.html
+++ b/public/auth/signup.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Quicksand:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Sign up for Onyx</title>
+    <title>Sign up for AIrtisan.</title>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
     <link rel="icon" href="/favicon" />
@@ -238,7 +238,7 @@
               <i class="ph-bold ph-eye" id="confirmEyeIcon"></i>
             </span>
           </div>
-          <span class="validation" id="confirm_password_text"></span> 
+          <span class="validation" id="confirm_password_text"></span>
         </div>
         <div class="formGroup submit">
           <button id="signupButton" type="button">Sign up.</button>
