--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Quicksand:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Log in to Onyx.</title>
+    <title>Log in to AIrtisan.</title>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <link rel="icon" href="/favicon" />
     <style>
