feat: updated some ui

--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -231,7 +231,7 @@
         unauthorized: {
           type: "error",
           message:
-            "You were logged out due to attempting to access a page you don't have access to.",
+            "You were logged out automatically either due to an expired token or unsufficient priviledges.",
         },
       };
 
