feat: changed unauthed text

--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -231,7 +231,7 @@
         unauthorized: {
           type: "error",
           message:
-            "You were logged out automatically either due to an expired token or unsufficient priviledges.",
+            "You were logged out automatically either due to an expired session or unsufficient priviledges.",
         },
       };
 
