feat: started adding admin page

--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -230,8 +230,7 @@
       const reasonMapping = {
         unauthorized: {
           type: "error",
-          message:
-            "You were logged out automatically either due to an expired session or unsufficient priviledges.",
+          message: "Your session has expired, please log in again.",
         },
       };
 
